--- a/courses/templates/app_base.html
+++ b/courses/templates/app_base.html
@@ -27,6 +27,9 @@
    <link rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'"
       href="{% static 'edutim/combine.css' %}" />
 
+   <link rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'"
+      href="https://fonts.googleapis.com/css2?family=Muli&family=Poppins:wght@400;600;700&family=Quicksand:wght@500;600;700&display=swa" />
+
    {% comment %}
    <!-- bootstrap.min css -->
    <link rel="stylesheet" href="{% static 'edutim/vendors/bootstrap/bootstrap.css' %}" />
