--- a/static/edutim/css/style.css
+++ b/static/edutim/css/style.css
@@ -21,8 +21,8 @@ Version      : 1.0
 9. Contact
 10. Footer / #footer
 -------------------------------------------------------------------*/
-
-@import url("https://fonts.googleapis.com/css2?family=Muli&family=Poppins:wght@400;600;700&family=Quicksand:wght@500;600;700&display=swap");
+/* 
+@import url("https://fonts.googleapis.com/css2?family=Muli&family=Poppins:wght@400;600;700&family=Quicksand:wght@500;600;700&display=swap"); */
 body,
 html {
     width: 100%;
