detail enable overview

--- a/courses/templates/courses/course/detail.html
+++ b/courses/templates/courses/course/detail.html
@@ -116,7 +116,7 @@ Money Back Guarante{% endblock %}
                     <div class="course-single-header white-text">
                         <span class="subheading">{{ subject }}</span>
                         <h3 class="single-course-title">{{ object.title }}</h3>
-                        <p class="d-none">{{ object.overview |slice:"0:185" }}</p>
+                        <p>{{ object.overview  }}</p>
                       
                         <div class="d-flex align-items-center ">
                             <div class="single-top-meta">
