details notes visible

--- a/courses/templates/courses/course/detail.html
+++ b/courses/templates/courses/course/detail.html
@@ -202,16 +202,16 @@ Money Back Guarante{% endblock %}
                 {% if object.features.first.notes %}
                 <div class="single-course-details mb-5">
                     <h4 class="course-title">Course Features:</h4>
-                    {% comment %} <div>
+                  <div>
                         {{ object.features.first.notes | safe }}
-                    </div> {% endcomment %}
+                    </div>
                     <div>
                         <ul>
                             <li>
                                 Easy to take class
                             </li>
                             <li>
-                                Unlimited access for two years  24/7 on any device
+                                Unlimited access, 24/7 on any device
                             </li>
                             <li>
                                 Regularly updated material
